[package]
name = "session-three"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.3.3"
criterion = "0.4.0"
hex = "0.4.3"
hex-literal = "0.3.4"
rand = "0.8.5"
sha2 = "0.10.6"
sha3 = "0.10.6"

[[bench]]
name = "sha512n_benchmark"
harness = false

[[bench]]
name = "hash_benchmark"
harness = false
